Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.9.7, 5.12.1
-
Fix Version/s: 5.12.3, 5.13.0, 5.14.0 Alpha
-
Component/s: WebEngine
-
Labels:None
-
Environment:Windows, Qt-5.9.7, debug -> crash
Windows, Qt-5.9.7, release -> crash
Linux, Qt-5.9.7, debug -> crash
Linux, Qt-5.12.1, debug -> crash
Linux, Qt-5.12.1, release -> ok
Qt-binaries downloaded and installed from http://download.qt.io/official_releases/qt/
-
Platform/s:
-
Commits:1f77d4709946511b919810354f19875824399096 (qt/qtwebengine/5.12)
Description
The application crashes when dynamic_casting eventFilter()'s first parameter 'QObject obj' to a QWidget. qobject_casting works.
The crash happens while eventFilter() is called with an obj originating from Qt5WebEngineCored, see attached screenshot.
A minimal application which reproduces the crash is attached.
PS: There is the class MessagePumpForUIQt which inherits QObject, but has no Q_OBJECT-Macro.
Attachments
Issue Links
- relates to
-
PYSIDE-819 QWebEngineView crashes Python process if ancestor widget processes key events
-
- Closed
-