Fix crash on dynamic_cast in global event filter

Installing an event filter on QApplication which uses dynamic_cast will crash
the application since QtWebEngine is sending QTimerEvents to classes without
RTTI information.

Fix by

  1. Moving the QObject part of MessagePumpForUIQt into api/ as a private class.
  2. Using QTimer directly in WebEngineSettings, without subclassing.

Fixes: QTBUG-73833
Change-Id: Ida73006a4fef76637c964f8f05468adcc4a190ce
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>